--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
 background: #fafafa;
+font-family: cursive;
+color: grey;
+text-align: center;
 }
 
 .dino{
@@ -22,7 +25,8 @@ background: #fafafa;
   text-align: center;
   color: grey;
   margin-top: 50px;
-font-family: cursive;
+  font-family: cursive;
+  border: 3px solid #505050;
 }
 
 @keyframes slideright {
@@ -37,9 +41,11 @@ font-family: cursive;
 .background{
   background-image: url(background.png);
   background-repeat: repeat-x;
-  animation: slideright 600s infinite linear;
-  width: 100%;
+  animation: slideright 700s infinite linear;
+  width: 80%;
   height: 200px;
   position: absolute;
   bottom: 0;
+  border: 2px solid #505050;
+  margin: 150px;
 }
